--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,12 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:5010"
+      }
+    }
   }
 }
